# JaredOS

./: .gitignore  README.md
CU/: CMakeLists.txt
CU/examples/: comprehensive_std.c  comprehensive_std.cup  control_flow  control_flow.c  control_flow.cup  hello.c  hello.cup  hello_test  hello_test.c  stdlib_demo.cup  stdlib_demo_test  stdlib_demo_test.c  vm_demo  vm_demo.c  vm_demo.cup
CU/include/: cu_std.cuph  cu_std.h
CU/specs/: 00-overview.md  01-syntax.md  02-types.md  03-memory.md  04-interop.md  05-philosophy-examples.md
CU/src/: codegen.cpp  codegen.hpp  cu.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
FoxOS/: Makefile  README.md  foxos.img  linker.ld
FoxOS/source/: boot.asm  font.c  interrupts.c  kernelA.c  kernelB.c  kernel_entry.asm  keyboard.c  main.c  mouse.c  pong.c  taskbar.c  types.h  vga.c  window.c
JSBOX/: Makefile  README.md
JSBOX/src/base/: hashmap.c  hashmap.h  logging.c  logging.h  memory.c  memory.h  strings.c  strings.h  (+1 more)
QELU/: LICENSE  Makefile  README.md  qels.lua  qelu.lua  qeluhttp.lua  qeluj.lua  qelup.lua  qelut.lua  qelutest.lua  test.lua
QELU/bindings/: qelup.c
SharkOS/: Makefile  README.md  linker.ld  shark.img
SharkOS/src/: ata.c  ata.h  editor.c  editor.h  fs.c  fs.h  io.h  kernel.c  kernel.h  kernel_entry.asm  keyboard.c  keyboard.h  memory.c  memory.h  shell.c  shell.h  string.c  string.h  types.h  vga.c  vga.h
jaredOS/: Makefile  README.md  disk.img  jaredOS.img  linker.ld
jaredOS/boot/: stage1.asm  stage2.asm
jaredOS/include/: jaredos.h
jaredOS/kernel/: main.c  types.h
vbox/: README.md
(+99 files in other folders)
